--- a/mysite/polls/templates/polls/base.html
+++ b/mysite/polls/templates/polls/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
+    <link rel="stylesheet" href="{% static 'forms.css' %}">
     <!-- Add any additional CSS files or stylesheets here -->
 </head>
 
@@ -14,9 +15,22 @@
 <body>
     <header class="base-header">
         <h1>Your vote matters</h1>
-         {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
-        {% endif %}
+        <nav>
+            <ul>
+                <a href="{% url 'home' %}">Home</a>   
+                {% if user.is_authenticated %}
+                    <a href="{% url 'polls' %}">Polls</a>
+                    
+                    
+                    <a href="{% url 'logout' %}">Logout</a>
+                    
+                {% else %}
+                    <a href="{% url 'login' %}">Login</a>
+                    <a href="{% url 'register' %}">Register</a>
+                {% endif %}
+            </ul>
+        </nav>
+
         <!-- Add your navigation menu or other header content here -->
     </header>
 
