--- a/mysite/polls/templates/polls/login.html
+++ b/mysite/polls/templates/polls/login.html
@@ -20,11 +20,11 @@
             <input type="password" name="password" placeholder="password" />
 
         </div>
-
         <button type="submit">Login</button>
-        <a href="{% url 'register' %}">Don't have an account?</a>
+         <a class="form-link" href="{% url 'register' %}">Don't have an account?</a>
     </div>
-    
+        
+       
 
     
 
