--- a/mysite/polls/templates/polls/register.html
+++ b/mysite/polls/templates/polls/register.html
@@ -8,6 +8,7 @@
 {% block content %}
 
 <form method="POST">
+
     <!-- {% csrf_token %} -->
     <div class="form-inputs">
         <h3>Create an account</h3>
@@ -30,7 +31,7 @@
         </div>
         
         <button type="submit">Register</button>
-        <a href="{% url 'login' %}">Already have an account?</a>
+        <a class="form-link" href="{% url 'login' %}">Already have an account?</a>
 
     </div>
     
