--- a/mysite/polls/templates/polls/home.html
+++ b/mysite/polls/templates/polls/home.html
@@ -1,6 +1,6 @@
 {% extends "polls/base.html" %}
 
-{% load static %}
+
 
 {% block title %}
     Home
@@ -9,6 +9,7 @@
 {% block content %}
 
 <form method="POST">
+    {% csrf_token %}
     <div class="form-inputs">
         <h3>What would you like to poll?</h3>
         <h5>Fields with a * are required</h5>
@@ -27,11 +28,8 @@
         <div class="form-input">
             <input type="text" maxlength="200" name="option_three" placeholder="Option 3 *" />
         </div>
-        
 
-        
-
-        <button type="submit">Poll</button>
+        <button type="submit">Create poll</button>
         
     </div>
     
