--- a/mysite/polls/templates/polls/base.html
+++ b/mysite/polls/templates/polls/base.html
@@ -8,20 +8,20 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
     <link rel="stylesheet" href="{% static 'forms.css' %}">
-    <!-- Add any additional CSS files or stylesheets here -->
+    
 </head>
 
 
 <body>
     <header class="base-header">
         <h1>Your vote matters</h1>
-        <nav>
+    </header>    
+        <div class="bar">
             <ul>
-                <a href="{% url 'home' %}">Home</a>   
+                  
                 {% if user.is_authenticated %}
-                    <a href="{% url 'polls' %}">Polls</a>
-                    
-                    
+                    <a href="{% url 'home' %}">Home</a> 
+                    <a href="{% url 'polls' %}">Polls</a>               
                     <a href="{% url 'logout' %}">Logout</a>
                     
                 {% else %}
@@ -29,10 +29,9 @@
                     <a href="{% url 'register' %}">Register</a>
                 {% endif %}
             </ul>
-        </nav>
+        </div>
 
-        <!-- Add your navigation menu or other header content here -->
-    </header>
+    
 
     <main>
         {% block content %}
@@ -41,7 +40,7 @@
     </main>
 
     <footer class="footer">
-        <!-- Add footer content here -->
+        
         <p>&copy; Voting is fun.</p>
     </footer>
 
