--- a/mysite/polls/templates/polls/login.html
+++ b/mysite/polls/templates/polls/login.html
@@ -1,14 +1,13 @@
 {% extends "polls/base.html" %}
 
-
-
 {% block title %}
-    login
+    Login
 {% endblock %}
     
 {% block content %}
 
 <form method="POST">
+    {% csrf_token %}
     <!-- {% csrf_token %} -->
     <div class="form-inputs">
         <h3>Login</h3>
