--- a/mysite/polls/templates/polls/vote.html
+++ b/mysite/polls/templates/polls/vote.html
@@ -1,6 +1,5 @@
 {% extends "polls/base.html" %}
 
-{% load static %}
 
 {% block title %}
     vote
@@ -9,13 +8,13 @@
 {% block content %}
 
 <form method="POST">
-
+    {% csrf_token %}
     <div class="vote-poll">
 
         <div class="question-title">
             {{ poll.question }}
         </div>
-        
+
         {% if not poll.user_has_voted %}
 
         <div class="radio">
