--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -11,19 +11,19 @@
 <div class="results">
     <h2>Voting results for: " {{ poll.question }} "</h2>
     <div class="option">
-        {{ poll.option_one }}
+        {{ poll.option_one }} :
         {{ poll.option_one_votes }}
-        votes
+        vote (s)
     </div>
     <div class="option">
-        {{ poll.option_two }}
+        {{ poll.option_two }} :
         {{ poll.option_two_votes }}
-        votes
+        vote (s)
     </div>
     <div class="option">
-        {{ poll.option_three }}
+        {{ poll.option_three }} :
         {{ poll.option_three_votes }}
-        votes
+        vote (s)
     </div>
 </div>
 
