--- a/mysite/polls/templates/polls/vote.html
+++ b/mysite/polls/templates/polls/vote.html
@@ -31,8 +31,8 @@
                 {{ poll.option_three }}
             </label>
         </div>
-
-    <button type="submit">Vote</button>
+    <div><button type="submit" style="width: 4em; margin-top: 3em;">Vote</button ></div>
+    
    
    
     {% else %}
