fixed bug where a poll could only have one vote, now the feature where a user can only vote once per poll and every authenticated user can vote for every poll works as expected

--- a/mysite/polls/templates/polls/vote.html
+++ b/mysite/polls/templates/polls/vote.html
@@ -15,7 +15,7 @@
             {{ poll.question }}
         </div>
 
-        {% if not poll.user_has_voted %}
+        {% if not has_voted %}
 
         <div class="radio">
             <label>
