--- a/mysite/polls/templates/polls/base.html
+++ b/mysite/polls/templates/polls/base.html
@@ -21,14 +21,15 @@
                   
                 {% if user.is_authenticated %}
                     <a href="{% url 'home' %}">Home</a> 
-                    <a href="{% url 'polls' %}">Polls</a>               
+                    <a href="{% url 'polls' %}">My polls</a>               
                     <a href="{% url 'logout' %}">Logout</a>
                     
                 {% else %}
                     <a href="{% url 'login' %}">Login</a>
                     <a href="{% url 'register' %}">Register</a>
                 {% endif %}
-            
+                <a href="{% url 'search' %}">Search poll</a>
+
         </div>
 
     
@@ -41,7 +42,6 @@
 
     <footer class="footer">
         
-        <p>&copy; Voting is fun.</p>
     </footer>
 
     
