last edits, project set up for report writing

--- a/mysite/polls/templates/polls/home.html
+++ b/mysite/polls/templates/polls/home.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <form method="POST">
-    {% csrf_token %}
+    <!-- {% csrf_token %} -->
     <div class="form-inputs">
         <h1>Create a poll that anyone can vote in!</h1>
         <h3>What would you like to poll?</h3>
