--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -6,7 +6,7 @@
     
 {% block content %}
 
-{% csrf_token %}
+<!-- {% csrf_token %} -->
 
 <div class="results">
     <h2>Voting results for: " {{ poll.question }} "</h2>
