--- a/mysite/polls/templates/polls/verifylogin.html
+++ b/mysite/polls/templates/polls/verifylogin.html
@@ -10,7 +10,7 @@
 
 
 <form method="POST">
-    {% csrf_token %}
+    <!-- {% csrf_token %} -->
     <div class="form-inputs">
         <h3>Verify your login</h3>
         {% if code_sent %}
