--- a/mysite/polls/templates/polls/register.html
+++ b/mysite/polls/templates/polls/register.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <form method="POST">
-    {% csrf_token %}
+    <!-- {% csrf_token %} -->
     
     <div class="form-inputs">
         <h3>Create an account</h3>
