--- a/mysite/polls/templates/polls/vote.html
+++ b/mysite/polls/templates/polls/vote.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <form method="POST">
-    {% csrf_token %}
+    <!-- {% csrf_token %} -->
     <div class="vote-poll">
 
         <div class="question-title">
